<resources>
    <string name="app_name">Push-уведомления</string>
    <!--добавиться*/-->

    <!--Авторизация*/-->
    <string name="desc_firebase_lockup">Firebase logo and name</string>
    <string name="signed_out">Signed Out</string>
    <string name="emailpassword_title_text">Email and Password</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="create_account">Create Account</string>
    <string name="sign_out">Sign Out</string>
    <string name="verify_email">Verify Email</string>
    <string name="loading">Loading…</string>
    <string name="auth_failed">Authentication failed</string>
    <string name="firebase_status_fmt">Firebase User: %s</string>
    <string name="emailpassword_status_fmt">Email User: %1$s (verified: %2$b)</string>
    <string name="menu_sing_out">Сменить пользователя</string>
    <string name="signIn_show">Sign In</string>
    <string name="registration_show">Registration</string>
    <string name="menu_enter">Вход</string>
    <string name="send_button">Отправить</string>
    <string name="new_notif_body_hint">Текст уведомления</string>
    <string name="new_notif_to">Кому:</string>
    <string name="switch_student">Студент</string>
    <string name="switch_teacher">Преподаватель</string>
    <string name="register_name_hint">Введите имя</string>

    <string name="delete">Удалить</string>
    <string name="deleteAll">Удалить все</string>
</resources>
