<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey_100"
    android:gravity="bottom"
    android:orientation="vertical"
    android:weightSum="4">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3.15"
        android:gravity="top|center"
        android:orientation="vertical"
        android:theme="@style/AppTheme"
        android:weightSum="1">

        <ImageView
            android:id="@+id/icon"
            style="@style/ThemeOverlay.FirebaseIcon"
            android:layout_width="140dp"
            android:layout_height="44dp"
            android:contentDescription="@string/desc_firebase_lockup"
            android:src="@drawable/firebase_lockup_400" />

        <TextView
            android:id="@+id/title_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/title_bottom_margin"
            android:text="@string/emailpassword_title_text"
            android:textSize="30sp"
            android:theme="@style/ThemeOverlay.MyTitleText" />

        <TextView
            android:id="@+id/status"
            style="@style/ThemeOverlay.MyTextDetail"
            android:text="@string/signed_out" />

        <TextView
            android:id="@+id/detail"
            style="@style/ThemeOverlay.MyTextDetail"
            tools:text="Firebase User ID: 123456789abc" />

        <RelativeLayout
            android:id="@+id/show_buttons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:ignore="NestedWeights">

            <Button
                android:id="@+id/sign_in_show"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/register_show"
                android:layout_alignParentTop="true"
                android:layout_alignStart="@+id/register_show"
                android:text="@string/signIn_show"
                android:theme="@style/ThemeOverlay.MyDarkButton"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/register_show"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/sign_in_show"
                android:layout_centerHorizontal="true"
                android:text="@string/registration_show"
                android:theme="@style/ThemeOverlay.MyDarkButton"
                tools:ignore="ButtonStyle" />

        </RelativeLayout>

        <android.support.constraint.ConstraintLayout
            android:id="@+id/register_additional_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical">

            <TextView
                android:id="@+id/studentTV"
                android:layout_width="76dp"
                android:layout_height="22dp"
                android:layout_marginEnd="84dp"
                android:layout_marginRight="84dp"
                android:text="@string/switch_student"
                android:textSize="16sp"
                app:layout_constraintBaseline_toBaselineOf="@+id/switch4"
                app:layout_constraintRight_toRightOf="parent" />

            <Switch
                android:id="@+id/switch4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.15" />

            <TextView
                android:id="@+id/teacherTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:layout_marginStart="50dp"
                android:text="@string/switch_teacher"
                android:textSize="16sp"
                app:layout_constraintBaseline_toBaselineOf="@+id/switch4"
                app:layout_constraintLeft_toLeftOf="parent" />

            <Spinner
                android:id="@+id/spinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginRight="16dp"
                android:layout_marginTop="55dp"
                android:layout_weight="1"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0"
                tools:ignore="RtlHardcoded" />

            <EditText
                android:id="@+id/displayedName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:ems="10"
                android:hint="@string/register_name_hint"
                android:inputType="textPersonName"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintHorizontal_bias="0.052"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent" />

        </android.support.constraint.ConstraintLayout>


    </LinearLayout>


    <RelativeLayout
        android:id="@+id/down_fieds_and_buttons"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="0.85"
        android:background="@color/grey_300"
        android:gravity="center_vertical">

        <LinearLayout
            android:id="@+id/email_password_fields"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingLeft="16dp"
            android:paddingRight="16dp">

            <EditText
                android:id="@+id/field_email"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/hint_email"
                android:inputType="textEmailAddress" />

            <EditText
                android:id="@+id/field_password"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/hint_password"
                android:inputType="textPassword" />
        </LinearLayout>

        <RelativeLayout
            android:id="@+id/email_password_buttons"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/email_password_fields"
            android:orientation="horizontal"
            android:paddingLeft="16dp"
            android:paddingRight="16dp">

            <Button
                android:id="@+id/email_sign_in_button"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:text="@string/sign_in"
                android:theme="@style/ThemeOverlay.MyDarkButton"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/email_create_account_button"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/email_sign_in_button"
                android:layout_alignParentTop="true"
                android:layout_alignStart="@+id/email_sign_in_button"
                android:layout_centerHorizontal="true"
                android:text="@string/create_account"
                android:theme="@style/ThemeOverlay.MyDarkButton"
                tools:ignore="ButtonStyle" />
        </RelativeLayout>

        <LinearLayout
            android:id="@+id/signed_in_buttons"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:orientation="horizontal"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:visibility="gone"
            android:weightSum="2.0">

            <Button
                android:id="@+id/sign_out_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.0"
                android:text="@string/sign_out"
                android:theme="@style/ThemeOverlay.MyDarkButton"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/verify_email_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.0"
                android:text="@string/verify_email"
                android:theme="@style/ThemeOverlay.MyDarkButton"
                tools:ignore="ButtonStyle" />

        </LinearLayout>

    </RelativeLayout>

</LinearLayout>